--- a/ClearVision_v6.theme.css
+++ b/ClearVision_v6.theme.css
@@ -19,7 +19,7 @@
   --danger-color: #982929;
   --url-color: var(--main-color);
   --undefined: 0;
-  --background-image: url('https://i.redd.it/tzleim0il7q41.jpg');
+  --background-image: url('https://i.imgur.com/D57UbIR.jpg');
   --background-shading: 100%;
   --background-position: center;
   --background-size: cover;
